--- a/MrJones/MrJones_v2.ipynb
+++ b/MrJones/MrJones_v2.ipynb
@@ -14,7 +14,7 @@
     "# Create a plot and add markers to indicate each data point\n",
     "plt.plot(study_hours, test_scores, marker='o')\n",
     "# Add your labels\n",
-    "\n",
+    "plt.\n",
     "# Add a grid in the background for readability\n",
     "\n",
     "# Plot the graph"
