Adds troubleshooting task

--- a/MrJones/MrJones_v2.ipynb
+++ b/MrJones/MrJones_v2.ipynb
@@ -43,7 +43,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "# Import your library and name your function\n",
+    "\n",
+    "# Times and temperatures\n",
+    "\n",
+    "# Create the plot with a line and markers\n",
+    "\n",
+    "# X and Y labels and title\n",
+    "\n",
+    "# Add a grid\n",
+    "\n",
+    "# Save to png and pdf file formats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "x = [1, 2, 3]\n",
+    "y = [1, 2]\n",
+    "plt.plot(x, y)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
