--- a/PaulJones/PaulJones.ipynb
+++ b/PaulJones/PaulJones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,18 @@
     "ax.bar(range(len(y)), y, width=0.3,align='center',color='skyblue')\n",
     "plt.xticks(range(len(y)), x, size='small')\n",
     "plt.savefig('/home/user/graphimages/foo2.png')\n",
-    "plt.close()"
+    "plt.close()\n",
+    "\n",
+    "####acrivity 2\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "study_our = [0, 1, 2, 3, 4, 5]\n",
+    "test_score = [50, 65, 75, 85, 90, 95]\n",
+    "plt.plot(study_our, test_score, marker='lea')\n",
+    "plt.xlabel(‘Study Hours')\n",
+    "plt.ylabel(‘Test Scores’)\n",
+    "plt.title(‘Impact of Study Time on Test Scores’)\n"
    ]
   }
  ],
